--- a/app/src/main/res/layout/fragment_joke.xml
+++ b/app/src/main/res/layout/fragment_joke.xml
@@ -11,12 +11,12 @@
         android:paddingRight="@dimen/margin_medium"
         android:paddingTop="@dimen/activity_vertical_margin">
 
-        <TextView
+        <com.passion.padc_joke.components.textviews.MMTextView
             android:id="@+id/tv_joke_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_medium_2"
-            android:text="@string/joke1_name"
+            android:text="@string/joke_one_title"
             android:textSize="@dimen/text_heading_1x"/>
 
         <ImageView
@@ -26,14 +26,14 @@
             android:scaleType="fitCenter"
             android:src="@drawable/joke_1"/>
 
-        <TextView
+        <com.passion.padc_joke.components.textviews.MMTextView
             android:id="@+id/tv_joke"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_medium_2"
             android:paddingLeft="@dimen/margin_medium"
             android:paddingRight="@dimen/margin_medium"
-            android:text="@string/joke1_story"
+            android:text="@string/joke_one_content"
             android:textSize="@dimen/text_regular_2x"/>
     </LinearLayout>
 
